2015-01-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* added support for CBQoS MIB persistent indexing
	(snmp mib persist cbqos)

2014-10-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: 27-OCT-2014: Release 2.08.02

2014-10-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: 02-OCT-2014: Release 2.08.01

2013-04-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: 29-APR-2013: Release 2.07.01

2013-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Added support for interface types: controlPlane, vlanPort, evc

2013-02-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: 15-FEB-2013: Release 2.06.01

	* Collector/Cisco_cbQoS.pm: Bugfix: unreachable devices could
	block the QoS collector from initialization.

2012-06-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm (deleteTarget): reduced the number of
	QoS map retrievals at collector startup

2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: cbqos Plugin release 2.02.02

2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 2.01.01

2011-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm (checkdevtype): SNMPv1 is
	explicitly unsupported

2011-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm (initTarget): bugfix: QoS maps were
	retrieved and deleted for every target token.

2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm: adapted to API change:
	replaced getHostname() with getHostHash()

2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* cisco.ios.cbqos.xml: implemented nodeid (only for CM summarries)

	* DevDiscover/CiscoIOS_cbQoS.pm: implemented node-display-name

2009-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
